--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@ layout: default
 	<div class="content" >      
 		<h3>Leadership Experience</h3>
 		<p>  Vice President of a Young Volunteers Association at Nanjing University &nbsp &nbsp 
-			<span style="font-style: italic;"> 06/2015-06/2016</span> <br>
+			<span style="font-style: italic;"> Jun.2015-Jun.2016</span> <br>
 		Organized and participated in over 100 out-of-school and 20 in-school activities covering over 1000 volunteers.
 		Our assocation received a volunteers association excellence award.
                 </p>
 
 		<p>  Co-Founder of a Children Care Volunteer Program  &nbsp &nbsp 
-			<span style="font-style: italic;"> 09/2015-12/2015</span> <br>		
+			<span style="font-style: italic;"> Sep.2015-Dec.2015</span> <br>		
 		Co-founded a psychological consulting program to promote left-behind, whose parents left them to seek work in big cities, 
 			children growth and education.
 		Volunteered to teach left-behind children Math and English in 
