--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: default
 			I am a senior student member of <a href="https://www.ieee.org/index.html">IEEE</a>,
 		a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">
 			Excellent Engineer Training Program</a>,
-		from <a href="http://www.moe.gov.cn/">the China Minstry of Education</a>.
+		from <a href="http://www.moe.gov.cn/">the Chinese Minstry of Education</a>.
 	</div>
 </div>   
 	
