--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@ layout: default
 
 		<p>  Co-Founder of a Children Care Volunteer Program  &nbsp &nbsp 
 			<span style="font-style: italic;"> Sep.2015-Dec.2015</span> <br>		
-		Co-founded a psychological consulting program to promote left-behind, whose parents left them to seek work in big cities, 
-			children growth and education.
+		Co-founded a psychological consulting program to promote left-behind children, 
+			whose parents left them to seek work in big cities, growth and education.
 		Volunteered to teach left-behind children Math and English in 
 			a junior high school located in the remote, underdeveloped Xiushui county.
-		Recognized as a key team leader in the successful Warm One Hundred Campaign, which raised money for 
-			left-behind children in remote and poor areas to help them buy new books and school supplies.
+		Recognized as a key team leader in the successful Warm One Hundred Campaign, which raised money for
+			left-behind children. Our group received excellence award.
                 </p>
 	</div> 
 		
