--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ layout: default
 	
 	<div class="content anchor" id="research">  	      
 	<h3>Research</h3>   
-	<p><span style="font-weight: bold;">Express bill handwritten telephone number recognition, leader</span> <br>
+	<p><span style="font-weight: bold;">Express Bill Handwritten Telephone Number Recognition, leader</span> <br>
 	<span style="font-style: italic;"> Feb.2017-present </span> &nbsp  Nanjing University <br> 
 		Learned PAC learning theory, Dropout, Batch Normalization, ResNet, RCNN, F-RCNN. <br>
 		Preprocessed image data (cleaning, stretching, rotating, normalizing). <br>
@@ -62,7 +62,7 @@ layout: default
 	<p><span style="font-weight: bold;">Real-time 3D Reconstruction Using Lidar (Light Detection And Ranging) and TSDF</span> <br>
 	<span style="font-style: italic;"> Aug.2016-present </span> &nbsp  Visual Sensing and Graphics Lab (VISG Lab), 
 		Nanjing University <br> 
-		Learned to use TSDF reconstruct indoor scene from range images. 
+		Learned to use TSDF (truncated signed distance function) to reconstruct indoor scene from range images. 
 			<span class="tag"><a href="http://anyirao.com/tsdf/room.html"> [Demo]</a></span> <br>
 		Collected and preprocessed point cloud datasets for outdoor 3D scene reconstruction.<br>
 		Reconstructed real-time outdoor scenes using Motion Estimation and Mapping. <br>
