--- a/index.html
+++ b/index.html
@@ -50,15 +50,7 @@ layout: default
 		</p>
 	
 	<div class="content anchor" id="research">  	      
-	<h3>Research</h3>   
-	<p><span style="font-weight: bold;">Express Bill Handwritten Telephone Number Recognition, leader</span> <br>
-	<span style="font-style: italic;"> Feb.2017-present </span> &nbsp  Nanjing University <br> 
-		Learned PAC learning theory, Dropout, Batch Normalization, ResNet, RCNN, F-RCNN. <br>
-		Preprocessed image data (cleaning, stretching, rotating, normalizing). <br>
-		Implemented VGG16, VGG19, GoogLeNet in Tensorflow, Theano, Caffe framework.<br> 
-		Accomplished 95% accuracy on each digit and 90% accuracy on a series of telephone number.<br>
-		
-		
+	<h3>Research</h3>
 	<p><span style="font-weight: bold;">Real-time 3D Reconstruction Using Lidar (Light Detection And Ranging) and TSDF</span> <br>
 	<span style="font-style: italic;"> Aug.2016-present </span> &nbsp  Visual Sensing and Graphics Lab (VISG Lab), 
 		Nanjing University <br> 
@@ -68,7 +60,18 @@ layout: default
 		Reconstructed real-time outdoor scenes using Motion Estimation and Mapping. <br>
 		Implemented low drift odometry and mapping (Loam) algorithms to improve accuracy.
 			<span class="tag"><a href="papers/3D_re.pdf"> [Presentation]</a></span> <br>
-		Used TSDF to reconstruct surface and achieved a state-of-the-art effect. <span class="tag"><a href="http://anyirao.com/tsdf/corridor.html"> [Demo]</a></span>
+		Used TSDF to reconstruct surface and achieved a state-of-the-art effect.
+			<span class="tag"><a href="http://anyirao.com/tsdf/outdoor.html"> [Demo]</a></span>	
+		
+	<p><span style="font-weight: bold;">Express Bill Handwritten Telephone Number Recognition, leader</span> <br>
+	<span style="font-style: italic;"> Feb.2017-present </span> &nbsp  Nanjing University <br> 
+		Learned PAC learning theory, Dropout, Batch Normalization, ResNet, RCNN, F-RCNN. <br>
+		Preprocessed image data (cleaning, stretching, rotating, normalizing). <br>
+		Implemented VGG16, VGG19, GoogLeNet in Tensorflow, Theano, Caffe framework.<br> 
+		Accomplished 95% accuracy on each digit and 90% accuracy on a series of telephone number.<br>
+		
+		
+	
           
 	<p><span style="font-weight: bold;">Road Car Flow and Its Effect on Roads, leader</span> <br>
 	<span style="font-style: italic;">Aug.2016-Sep.2016 /&nbsp Dec.2016-Jan.2017 </span> <br>
