--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@ layout: default
 			
 			<li>Charles Severance. Python Data Structures. University of Michigan.<br>
 			<li>Hsuan-Tien Lin.  Machine Learning Foundations. National Taiwan University. <br>
-			<li>Andrew Ng. CS229: Machine Learning. Stanford.<span class="tag"><a href="papers/ML_Proposal.pdf"> [Proposal]</a></span>  <br>
+			<li>Andrew Ng. CS229: Machine Learning. Stanford.
+				<span class="tag"><a href="papers/ML_Proposal.pdf"> [Proposal]</a></span>  <br>
 			<li>Silvio Savarese. CS231A: Computer Vision: from 3D reconstruction to recognition. Stanford.<br>
 			<li>Fei-Fei Li &amp Andrej Karpathy. CS231N: Convolutional Neural Networks for Visual Recognition. Stanford.<br>
 		</p>
@@ -58,9 +59,10 @@ layout: default
 			<span class="tag"><a href="http://anyirao.com/tsdf/room.html"> [Demo]</a></span> <br>
 		Collected and preprocessed point cloud datasets for outdoor 3D scene reconstruction.<br>
 		Reconstructed real-time outdoor scenes using Motion Estimation and Mapping. <br>
-		Implemented low drift odometry and mapping (Loam) algorithms to improve accuracy.
-			<span class="tag"><a href="papers/3D_re.pdf"> [Presentation]</a></span> <br>
+		Implemented low drift odometry and mapping (Loam) algorithms to improve accuracy.<br>		
 		Used TSDF to reconstruct surface and achieved a state-of-the-art effect.
+			<span class="tag"><a href="papers/SurRecPoster.pdf"> [Poster]</a></span>
+			<span class="tag"><a href="papers/3D_re.pdf"> [Oral]</a></span> 
 			<span class="tag"><a href="http://anyirao.com/tsdf/outdoor.html"> [Demo]</a></span>	
 		
 	<p><span style="font-weight: bold;">Express Bill Handwritten Telephone Number Recognition, leader</span> <br>
@@ -88,7 +90,7 @@ layout: default
 		     &nbsp  Research Institute of Superconductor Electronics (RISE), Nanjing University <br>
 		Designed a 64-channels low-noise pre-amplifier using a symmetric structure, reduced noise by 100 times, drew an 8-layers circuit board. 
 		     <span class="tag"><a href="papers/basic_forum.pdf"> [Paper]</a></span>
-		     <span class="tag"><a href="papers/Low_noise_preamplifier.pdf"> [Presentation]</a></span><br>
+		     <span class="tag"><a href="papers/Low_noise_preamplifier.pdf"> [Oral]</a></span><br>
 	</div>        
 	
 	<div class="content anchor" id="project">  
