--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ layout: default
 	
 	<div class="content anchor" id="academic">     
 	<h3>Academic</h3>
-		<p>My GPA ranks No.1 in each academic year. All major curricula are above 95 (A+). 
+		<p>My GPA ranks No.1 in each year. All major curricula are above 95 (A+). 
 		My overall GPA is 3.96 out of 4.00. I am the top student among 183 classmates in my school. 
 			
 			
