--- a/index.html
+++ b/index.html
@@ -63,10 +63,15 @@ layout: default
 		Used TSDF to reconstruct surface and achieved a state-of-the-art effect.
 			<span class="tag"><a href="papers/SurRecPoster.pdf"> [Poster]</a></span>
 			<span class="tag"><a href="papers/3D_re.pdf"> [Oral]</a></span> 
-			<span class="tag"><a href="http://anyirao.com/tsdf/outdoor.html"> [Demo]</a></span>	
+			<span class="tag"><a href="http://anyirao.com/tsdf/outdoor.html"> [Demo]</a></span>
+		
+	<p><span style="font-weight: bold;">Automatic Music Transcription</span> <br>
+	<span style="font-style: italic;"> Jul.2017-present </span> &nbsp  The University of Hong Kong<br> 
+		Implemented deep learning to solve multipitch detection and note onset/offset detection. <br>
+		
 		
 	<p><span style="font-weight: bold;">Express Bill Handwritten Telephone Number Recognition, leader</span> <br>
-	<span style="font-style: italic;"> Feb.2017-present </span> &nbsp  Nanjing University <br> 
+	<span style="font-style: italic;"> Feb.2017-Jul.2017 </span> &nbsp  Nanjing University <br> 
 		Learned PAC learning theory, Dropout, Batch Normalization, ResNet, RCNN, F-RCNN. <br>
 		Preprocessed image data (cleaning, stretching, rotating, normalizing). <br>
 		Implemented VGG16, VGG19, GoogLeNet in Tensorflow, Theano, Caffe framework.<br> 
