--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@ layout: default
 		
 	<p><span style="font-weight: bold;">Automatic Music Transcription</span> <br>
 	<span style="font-style: italic;"> Jul.2017-present </span> &nbsp  The University of Hong Kong<br> 
-		Implemented deep learning to solve multipitch detection and note onset/offset detection. <br>
+		Implemented Hidden Markov Model to solve multipitch detection and note onset/offset detection. <br>
+		Synchronised music sheet to live performance, with highlighting of the current bar and automatic 
+			turning of the pages. <br>
 		
 		
 	<p><span style="font-weight: bold;">Express Bill Handwritten Telephone Number Recognition, leader</span> <br>
