--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ layout: default
 		Programming: Advanced Python, C/C++, MATLAB   &nbsp Intermediate HTML, CSS, Assembly, Altium <br>
 		Research Platforms and Libraries: TensorFlow, Theano, MatConvNet, Caffe, liblinear, libSVM, VLFeat, CVX, SPArse Modeling Software, OpenCV，OpenGL, WebGL, Git<br>
 		Document: LaTex, Markdown<br>
-		Operating Systems: Ubuntu 14/16, Windows XP/7/10, iOS X <br>
+		Operating Systems: Ubuntu 14/16, Windows XP/7/8/10, macOS<br>
 		English Proficiency Test: TOEFL 100; GRE: 151(Verbal)+170(Math, full mark)+3.5(Writing)
 		</p>
 	<h3>Miscellaneous</h3>	
