--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ layout: default
 	
 	<div class="content anchor" id="research">  	      
 	<h3>Research</h3>
-	<p><span style="font-weight: bold;">Real-time 3D Reconstruction Using Lidar (Light Detection And Ranging) and TSDF</span> <br>
+	<p><span style="font-weight: bold;">Real-time 3D Surface Reconstruction Using Lidar (Light Detection And Ranging)</span> <br>
 	<span style="font-style: italic;"> Aug.2016-present </span> &nbsp  Visual Sensing and Graphics Lab (VISG Lab), 
 		Nanjing University <br> 
 		Learned to use TSDF (truncated signed distance function) to reconstruct indoor scene from range images. 
@@ -65,15 +65,15 @@ layout: default
 			<span class="tag"><a href="papers/3D_re.pdf"> [Oral]</a></span> 
 			<span class="tag"><a href="http://anyirao.com/tsdf/outdoor.html"> [Demo]</a></span>
 		
-	<p><span style="font-weight: bold;">Automatic Music Transcription</span> <br>
-	<span style="font-style: italic;"> Jul.2017-present </span> &nbsp  The University of Hong Kong<br> 
+	<p><span style="font-weight: bold;">Automatic Music Transcription and Accompaniment</span> <br>
+	<span style="font-style: italic;"> Jul.2017-present </span> &nbsp  The University of Hong Kong, supervised by Francis Lau<br> 
 		Implemented Hidden Markov Model to solve multipitch detection and note onset/offset detection. <br>
 		Synchronised music sheet to live performance, with highlighting of the current bar and automatic 
 			turning of the pages. <br>
 		
 		
 	<p><span style="font-weight: bold;">Express Bill Handwritten Telephone Number Recognition, leader</span> <br>
-	<span style="font-style: italic;"> Feb.2017-Jul.2017 </span> &nbsp  Nanjing University <br> 
+	<span style="font-style: italic;"> Feb.2017-Jul.2017 </span> &nbsp Nanjing University Lamda Group led by Zhi-hua Zhou<br> 
 		Learned PAC learning theory, Dropout, Batch Normalization, ResNet, RCNN, F-RCNN. <br>
 		Preprocessed image data (cleaning, stretching, rotating, normalizing). <br>
 		Implemented VGG16, VGG19, GoogLeNet in Tensorflow, Theano, Caffe framework.<br> 
