--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@ layout: default
 <div class="content anchor" id="bio">     
 	<div class="text">
 	<h3>Short Bio</h3>
-		<p> I am a third year undergrad student from School of Electronic Science and Engineering, Nanjing University.
+		<p> I am a third year undergrad student from School of Electronic Science and Engineering, Nanjing University. I am a
+			research assistant of The University of Hong Kong, supervised by Prof.
+			<a href="http://www.cs.hku.hk/people/profile.jsp?teacher=fcmlau">Francis Lau</a>.
+			I was also a member of Learning And Minging from DatA group led by Prof. 
+			<a href="https://cs.nju.edu.cn/zhouzh/">Zhi-Hua Zhou</a> 
 		I serve as a <a href="http://www.huawei.com/en/">HUAWEI</a> campus ambassador. 
 			I am a senior student member of <a href="https://www.ieee.org/index.html">IEEE</a>,
 		a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">
@@ -66,14 +70,14 @@ layout: default
 			<span class="tag"><a href="http://anyirao.com/tsdf/outdoor.html"> [Demo]</a></span>
 		
 	<p><span style="font-weight: bold;">Automatic Music Transcription and Accompaniment</span> <br>
-	<span style="font-style: italic;"> Jul.2017-present </span> &nbsp  The University of Hong Kong, supervised by Francis Lau<br> 
+	<span style="font-style: italic;"> Jul.2017-present </span> &nbsp  The University of Hong Kong<br> 
 		Implemented Hidden Markov Model to solve multipitch detection and note onset/offset detection. <br>
 		Synchronised music sheet to live performance, with highlighting of the current bar and automatic 
 			turning of the pages. <br>
 		
 		
 	<p><span style="font-weight: bold;">Express Bill Handwritten Telephone Number Recognition, leader</span> <br>
-	<span style="font-style: italic;"> Feb.2017-Jul.2017 </span> &nbsp Nanjing University Lamda Group led by Zhi-hua Zhou<br> 
+	<span style="font-style: italic;"> Feb.2017-Jul.2017 </span> &nbsp Learning And Minging from DatA Group, Nanjing University <br> 
 		Learned PAC learning theory, Dropout, Batch Normalization, ResNet, RCNN, F-RCNN. <br>
 		Preprocessed image data (cleaning, stretching, rotating, normalizing). <br>
 		Implemented VGG16, VGG19, GoogLeNet in Tensorflow, Theano, Caffe framework.<br> 
