--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ layout: default
 			research assistant of The University of Hong Kong, supervised by Prof.
 			<a href="http://www.cs.hku.hk/people/profile.jsp?teacher=fcmlau">Francis Lau</a>.
 			I was also a member of Learning And Minging from DatA group led by Prof. 
-			<a href="https://cs.nju.edu.cn/zhouzh/">Zhi-Hua Zhou</a> 
+			<a href="https://cs.nju.edu.cn/zhouzh/">Zhi-Hua Zhou</a>.<br> 
 		I serve as a <a href="http://www.huawei.com/en/">HUAWEI</a> campus ambassador. 
 			I am a senior student member of <a href="https://www.ieee.org/index.html">IEEE</a>,
 		a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">
