--- a/index.html
+++ b/index.html
@@ -23,16 +23,15 @@ layout: default
 <div class="content anchor" id="bio">     
 	<div class="text">
 	<h3>Short Bio</h3>
-		<p> I am a third year undergrad student from School of Electronic Science and Engineering, Nanjing University. I am a
+		<p> I am a third year undergrad student from School of Electronic Science and Engineering 
+			<a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">
+			Excellent Engineer Honor Class</a>, Nanjing University. I am a
 			research assistant of The University of Hong Kong, supervised by Prof.
 			<a href="http://www.cs.hku.hk/people/profile.jsp?teacher=fcmlau">Francis Lau</a>.
 			I was also a member of Learning And Minging from DatA group led by Prof. 
-			<a href="https://cs.nju.edu.cn/zhouzh/">Zhi-Hua Zhou</a>.<br> 
-		I serve as a <a href="http://www.huawei.com/en/">HUAWEI</a> campus ambassador. 
-			I am a senior student member of <a href="https://www.ieee.org/index.html">IEEE</a>,
-		a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">
-			Excellent Engineer Training Program</a>,
-		from <a href="http://www.moe.gov.cn/">the Chinese Minstry of Education</a>.
+			<a href="https://cs.nju.edu.cn/zhouzh/">Zhi-Hua Zhou</a>. 
+		I serve as a <a href="http://www.huawei.com/en/">HUAWEI</a> campus ambassador and 
+			 a senior student member of IEEE.
 	</div>
 </div>   
 	
