--- a/index.html
+++ b/index.html
@@ -68,11 +68,13 @@ layout: default
 			<span class="tag"><a href="papers/3D_re.pdf"> [Oral]</a></span> 
 			<span class="tag"><a href="http://anyirao.com/tsdf/outdoor.html"> [Demo]</a></span>
 		
-	<p><span style="font-weight: bold;">Automatic Music Transcription and Accompaniment</span> <br>
-	<span style="font-style: italic;"> Jul.2017-present </span> &nbsp  The University of Hong Kong<br> 
-		Implemented Hidden Markov Model to solve multipitch detection and note onset/offset detection. <br>
-		Synchronised music sheet to live performance, with highlighting of the current bar and automatic 
-			turning of the pages. <br>
+	<p><span style="font-weight: bold;">Automatic Music Follower and Accompaniment</span> <br>
+	<span style="font-style: italic;"> Jul.2017-present </span> &nbsp  The University of Hong Kong<br>
+		There is no open source Windows/Android based implementation of automatic music score following and accompaniment.<br>
+		Developed a parallel Hidden Markov Model for score following.<br>
+		Proposed a fast decoding algorithm to deal with performance errors and reduce computational complexity from O(n<sup>2</sup>)
+		to O(n). <br>
+		
 		
 		
 	<p><span style="font-weight: bold;">Express Bill Handwritten Telephone Number Recognition, leader</span> <br>
