--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@ layout: default
 		There is no open source Windows/Android based implementation of automatic music score following and accompaniment.<br>
 		Developed a parallel Hidden Markov Model for score following.<br>
 		Proposed a fast decoding algorithm to deal with performance errors and reduce computational complexity from O(n<sup>2</sup>)
-		to O(n). <br>
+		to O(n). 
+		<span class="tag"><a href="https://github.com/AnyiRao/AMAHMM"> [Code]</a></span>
 		
 		
 		
