--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@ layout: default
 			<span class="tag"><a href="papers/3D_re.pdf"> [Oral]</a></span> 
 			<span class="tag"><a href="http://anyirao.com/tsdf/outdoor.html"> [Demo]</a></span>
 		
-	<p><span style="font-weight: bold;">Automatic Music Follower and Accompaniment</span> <br>
+	<p><span style="font-weight: bold;">Automatic Music Accompaniment</span> <br>
 	<span style="font-style: italic;"> Jul.2017-present </span> &nbsp  The University of Hong Kong<br>
-		There is no open source Windows/Android based implementation of automatic music score following and accompaniment.<br>
-		Developed a parallel Hidden Markov Model for score following.<br>
+		Our work is the first free open-source Windows based automatic music follower and accompanist to our best knowledge.<br>
+		Constructed a comprehensive system and developed a parallel Hidden Markov Model for score following.<br>
 		Proposed a fast decoding algorithm to deal with performance errors and reduce computational complexity from O(n<sup>2</sup>)
-		to O(n). 
+		to O(n). It is able to work in real time with practical length scores.
 		<span class="tag"><a href="https://github.com/AnyiRao/AMAHMM"> [Code]</a></span>
 		<span class="tag"><a href="papers/Report Automatic Music Accompanist.pdf"> [Paper]</a></span>
 		<span class="tag"><a href="papers/Automatic Music Accompanist Presentation.pdf"> [Presentation]</a></span>
