--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ layout: default
 			<span class="tag"><a href="papers/3D_re.pdf"> [Oral]</a></span> 
 			<span class="tag"><a href="http://anyirao.com/tsdf/outdoor.html"> [Demo]</a></span>
 		
-	<p><span style="font-weight: bold;">Automatic Music Accompaniment</span> <br>
+	<p><span style="font-weight: bold;">Automatic Music Accompaniment using Porbabilistic Machine Learning</span> <br>
 	<span style="font-style: italic;"> Jul.2017-present </span> &nbsp  The University of Hong Kong<br>
 		Our work is the first free open-source Windows based automatic music follower and accompanist to our best knowledge.<br>
 		Constructed a comprehensive system and developed a parallel Hidden Markov Model for score following.<br>
@@ -79,7 +79,7 @@ layout: default
 		<span class="tag"><a href="papers/Automatic Music Accompanist Presentation.pdf"> [Presentation]</a></span>
 		
 		
-	<p><span style="font-weight: bold;">Express Bill Handwritten Telephone Number Recognition, leader</span> <br>
+	<p><span style="font-weight: bold;">Express Bill Handwritten Telephone Number Recognition</span> <br>
 	<span style="font-style: italic;"> Feb.2017-Jul.2017 </span> &nbsp Learning And Minging from DatA Group, Nanjing University <br> 
 		Learned PAC learning theory, Dropout, Batch Normalization, ResNet, RCNN, F-RCNN. <br>
 		Preprocessed image data (cleaning, stretching, rotating, normalizing). <br>
@@ -113,17 +113,14 @@ layout: default
 		Preprocessed data sets with the html2text;
 		Trained the model with Logistic Regression, Naive Bayes, SVM and CNN.
 			
-		<p><span style="font-weight: bold;">Monte Carlo Method for Solving Multidimensional Deﬁnite Integrals; 
-			Probability and Stochastic Process </span> <br>
-		Monte Carlo method relies on repeated random sampling to obtain numerical results. 
-		I used it to calculate definite integrals and compared it with numerical methods and improved it.
-		<span class="tag"><a href="papers/monte_carlo_method.pdf"> [Paper]</a></span>
-			
 		<p><span style="font-weight: bold;">3D Human Poses Estimation from a single image; Computer Vision </span> <br>
 			Used sparse coding to reduce the ambiguities in the 3D pose estimation; 
 			Enforced human-portion constraints to get a minimization problem
-		<span class="tag"><a href="papers/CV_Report.pdf"> [Project Report]</a></span>
-			
+		<span class="tag"><a href="papers/CV_Report.pdf"> [Presentation]</a></span>
+		
+		<p><span style="font-weight: bold;">Monte Carlo Method for Solving Multidimensional Deﬁnite Integrals; 
+			Probability and Stochastic Process </span>
+		<span class="tag"><a href="papers/monte_carlo_method.pdf"> [Report]</a></span>	
 		
 		<p><span style="font-weight: bold;">Cluster sky objects; Python</span>
 			<span class="tag"><a href="papers/Cluster.txt"> [Details]</a></span>
@@ -133,7 +130,7 @@ layout: default
 			 
 		<p><span style="font-weight: bold;">Assembly Language Practice;
 			The Principle of Microcomputers and Interface Techniques </span>
-		<span class="tag"><a href="papers/masm.pdf"> [Project Report]</a></span>
+		<span class="tag"><a href="papers/masm.pdf"> [Report]</a></span>
 			
 	</div>
 
@@ -158,12 +155,13 @@ layout: default
 		
 	<div class="content" >      
 		<h3>Awards</h3>
-		<p>National Scholarship awarded by the Chinese Ministry of Education<br>
-		Provincial-Level Merit Student, the highest honor in Jiangsu Province<br>
-		Nanjing University People Scholarship<br>
+		<p>National Scholarship awarded by the Chinese Ministry of Education, the highest honor in China<br>
+		Provincial-Level Merit Student awarded by the Jiangsu Provincial Government, the highest honor in Jiangsu Province<br>
+		Zhenggang Scholarship, top 40 students in Nanjing University<br>
+		Nanjing University People Scholarship<br>	
                 Nanjing University Outstanding Student Leader Award<br>
                 Nanjing University Outstanding Student Award<br>
-	        Top Volunteer Excellence Award<br>
+	        Nanjing University Top Volunteer Excellence Award<br>
 		Calculus World Cup world ranking 32th, <a herf="www.ntu.edu.tw/english/"> National Taiwan University </a><br>
 		Meritorious winner prize in the 2016 National Mathematical Modeling Contest<br>
 		First prize in the 2014 University Electronics Design Contest and the paper about it was published in Nanjing University 
@@ -188,9 +186,9 @@ layout: default
 		Member of Nanjing University <a href="http://www.nju.edu.cn/EN/84/08/c7125a164872/page.htm"> Student Choir</a> &nbsp 
 			(<span class="tag"><a href="http://v.youku.com/v_show/id_XMjA1ODIzMjQwOA==.html?spm=a2hzp.8244740.userfeed.5!2~5~5~5!3~5~A.Rb6hYG">Joyful Snowflakes </a></span>  written by Chih-mo Hsu) <br>    
 		Vice president of a Young Volunteers Association 
-			<span class="tag"><a href="http://tuanwei.nju.edu.cn/article/6965-2015-12-02-16-41-07">  [Report]</a></span> <br>   
+			<span class="tag"><a href="http://tuanwei.nju.edu.cn/article/6965-2015-12-02-16-41-07">  [Media Report]</a></span> <br>   
 		Bronze medal at Nanjing University 55th Sports Meet 
-			<span class="tag"><a href="http://tuanwei.nju.edu.cn/article/4545-201411030008">  [Report]</a></span> 
+			<span class="tag"><a href="http://tuanwei.nju.edu.cn/article/4545-201411030008">  [Media Report]</a></span> 
 		</p>
 	</div>
 			
