--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@ layout: default
 		<p>I finished my major curricula in 2 years and I learned a lot from online courses. 
 			<a href="http://anyirao.com/more"> [Whole]</a><br>
 			
-			<li>Charles Severance. Python Data Structures. University of Michigan.<br>
 			<li>Hsuan-Tien Lin.  Machine Learning Foundations. National Taiwan University. <br>
 			<li>Andrew Ng. CS229: Machine Learning. Stanford.
 				<span class="tag"><a href="papers/ML_Proposal.pdf"> [Proposal]</a></span>  <br>
 			<li>Silvio Savarese. CS231A: Computer Vision: from 3D reconstruction to recognition. Stanford.<br>
 			<li>Fei-Fei Li &amp Andrej Karpathy. CS231N: Convolutional Neural Networks for Visual Recognition. Stanford.<br>
+			<li>Daphne Koller. CS228: Probabilistic Graphical Models. Stanford.<br>
+			<li>Chris Manning &amp Richard Socher. CS224N: Natural Language Processing with Deep Learning. Stanford.<br>	
 		</p>
 	
 	<div class="content anchor" id="research">  	      
