--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ layout: default
 			<span class="tag"><a href="papers/3D_re.pdf"> [Oral]</a></span> 
 			<span class="tag"><a href="http://anyirao.com/tsdf/outdoor.html"> [Demo]</a></span>
 		
-	<p><span style="font-weight: bold;">Automatic Music Accompaniment using Porbabilistic Machine Learning</span> <br>
+	<p><span style="font-weight: bold;">Automatic Music Accompaniment Using Porbabilistic Machine Learning</span> <br>
 	<span style="font-style: italic;"> Jul.2017-present </span> &nbsp  The University of Hong Kong<br>
 		Our work is the first free open-source Windows based automatic music follower and accompanist to our best knowledge.<br>
 		Constructed a comprehensive system and developed a parallel Hidden Markov Model for score following.<br>
