--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: default
 			Excellent Engineer Honor Class</a>, Nanjing University. I am a
 			research assistant of The University of Hong Kong, supervised by Prof.
 			<a href="http://www.cs.hku.hk/people/profile.jsp?teacher=fcmlau">Francis Lau</a>.
-			I was also a member of Learning And Minging from DatA group led by Prof. 
+			I was also a member of Learning And Mining from DatA group led by Prof. 
 			<a href="https://cs.nju.edu.cn/zhouzh/">Zhi-Hua Zhou</a>. 
 		I serve as a <a href="http://www.huawei.com/en/">HUAWEI</a> campus ambassador and 
 			 a senior student member of IEEE.
@@ -81,7 +81,7 @@ layout: default
 		
 		
 	<p><span style="font-weight: bold;">Express Bill Handwritten Telephone Number Recognition</span> <br>
-	<span style="font-style: italic;"> Feb.2017-Jul.2017 </span> &nbsp Learning And Minging from DatA Group, Nanjing University <br> 
+	<span style="font-style: italic;"> Feb.2017-Jul.2017 </span> &nbsp Learning And Mining from DatA Group, Nanjing University <br> 
 		Learned PAC learning theory, Dropout, Batch Normalization, ResNet, RCNN, F-RCNN. <br>
 		Preprocessed image data (cleaning, stretching, rotating, normalizing). <br>
 		Implemented VGG16, VGG19, GoogLeNet in Tensorflow, Theano, Caffe framework.<br> 
