--- a/index.html
+++ b/index.html
@@ -53,9 +53,13 @@ layout: default
 			<li>Daphne Koller. CS228: Probabilistic Graphical Models. Stanford.<br>
 			<li>Chris Manning &amp Richard Socher. CS224N: Natural Language Processing with Deep Learning. Stanford.<br>	
 		</p>
-	
+	<div class="content anchor" id="publication">     
+	<h3>Publication</h3>
+	<p><span style="font-weight: bold;">Real-time Large-scale Lidar Surface Reconstruction</span> <br>
+	Jian Zhang*, Anyi Rao*, Conghui Geng, Yao Yu, Yu Zhou, Sidan Du (*indicates equal contribution)
+		In IEEE International Conference on Robotics and Automation (ICRA), 2018 submitted	
 	<div class="content anchor" id="research">  	      
-	<h3>Research</h3>
+	<h3>Research</h3>		
 	<p><span style="font-weight: bold;">Real-time 3D Surface Reconstruction Using Lidar (Light Detection And Ranging)</span> <br>
 	<span style="font-style: italic;"> Aug.2016-present </span> &nbsp  Visual Sensing and Graphics Lab (VISG Lab), 
 		Nanjing University <br> 
