--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ layout: default
 	<div class="content anchor" id="publication">     
 	<h3>Publication</h3>
 	<p><span style="font-weight: bold;">Real-time Large-scale Lidar Surface Reconstruction</span> <br>
-	Jian Zhang*, <span style="bold">Anyi Rao*</span>, Conghui Geng, Yao Yu, Yu Zhou, Sidan Du (*indicates equal contribution)
+	Jian Zhang*, <span style="font-weight: bold;">Anyi Rao*</span>, Conghui Geng, Yao Yu, Yu Zhou, Sidan Du (*indicates equal contribution)
 		In IEEE International Conference on Robotics and Automation (ICRA), 2018 submitted	
 	<div class="content anchor" id="research">  	      
 	<h3>Research</h3>		
