--- a/index.html
+++ b/index.html
@@ -62,23 +62,22 @@ layout: default
 	<h3>Research</h3>		
 	<p><span style="font-weight: bold;">Real-time 3D Surface Reconstruction Using Lidar (Light Detection And Ranging)</span> <br>
 	<span style="font-style: italic;"> Aug.2016-present </span> &nbsp  Visual Sensing and Graphics Lab (VISG Lab), 
-		Nanjing University <br> 
-		Learned to use TSDF (truncated signed distance function) to reconstruct indoor scene from range images. 
-			<span class="tag"><a href="http://anyirao.com/tsdf/room.html"> [Demo]</a></span> <br>
-		Collected and preprocessed point cloud datasets for outdoor 3D scene reconstruction.<br>
-		Reconstructed real-time outdoor scenes using Motion Estimation and Mapping. <br>
-		Implemented low drift odometry and mapping (Loam) algorithms to improve accuracy.<br>		
-		Used TSDF to reconstruct surface and achieved a state-of-the-art effect.
+		Nanjing University <br>
+		Proposed a novel line of sight method to real-time reconstruct surface and achieved a state-of-the-art effect.<br>
+		Employed a novel surface lattice approach in implicit surface update for memory efficiency.<br>
+		Imporved low drift odometry and mapping (Loam) algorithms to improve accuracy.<br>		
+		Implemented Motion Estimation and Mapping to register point cloud.<br>
+		Collected and preprocessed point cloud data sets for outdoor 3D scene reconstruction.
 			<span class="tag"><a href="papers/SurRecPoster.pdf"> [Poster]</a></span>
-			<span class="tag"><a href="papers/3D_re.pdf"> [Oral]</a></span> 
+			<span class="tag"><a href="papers/3D_re.pdf"> [Presentation]</a></span> 
 			<span class="tag"><a href="http://anyirao.com/tsdf/outdoor.html"> [Demo]</a></span>
 		
 	<p><span style="font-weight: bold;">Automatic Music Accompaniment Using Porbabilistic Machine Learning</span> <br>
 	<span style="font-style: italic;"> Jul.2017-present </span> &nbsp  The University of Hong Kong<br>
-		Our work is the first free open-source Windows based automatic music follower and accompanist to our best knowledge.<br>
-		Constructed a comprehensive system and developed a parallel Hidden Markov Model for score following.<br>
 		Proposed a fast decoding algorithm to deal with performance errors and reduce computational complexity from O(n<sup>2</sup>)
-		to O(n). It is able to work in real time with practical length scores.
+		to O(n). It is able to work in real time with practical length scores.<br>
+		Constructed a comprehensive system and developed a parallel Hidden Markov Model for score following.<br>
+		Our work was the first free open-source Windows based automatic music follower and accompanist to our best knowledge.
 		<span class="tag"><a href="https://github.com/AnyiRao/AMAHMM"> [Code]</a></span>
 		<span class="tag"><a href="papers/Report Automatic Music Accompanist.pdf"> [Paper]</a></span>
 		<span class="tag"><a href="papers/Automatic Music Accompanist Presentation.pdf"> [Presentation]</a></span>
