--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ layout: default
 		Proposed a fast decoding algorithm to deal with performance errors and reduce computational complexity from O(n<sup>2</sup>)
 		to O(n). It is able to work in real time with practical length scores.<br>
 		Constructed a comprehensive system and developed a parallel Hidden Markov Model for score following.<br>
-		Our work was the first free open-source Windows based automatic music follower and accompanist to our best knowledge.
+		Developed a new free open-source Windows based automatic music follower and accompanist.
 		<span class="tag"><a href="https://github.com/AnyiRao/AMAHMM"> [Code]</a></span>
 		<span class="tag"><a href="papers/Report Automatic Music Accompanist.pdf"> [Paper]</a></span>
 		<span class="tag"><a href="papers/Automatic Music Accompanist Presentation.pdf"> [Presentation]</a></span>
