--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ layout: default
 		</p>
 	<div class="content anchor" id="publication">     
 	<h3>Publication</h3>
-	<p><span style="font-weight: bold;">Real-time Large-scale Lidar Surface Reconstruction</span> <br>
+	<p><span style="font-weight: bold;">Real-time Large-scale Surface Reconstruction of Lidar Point Cloud</span> <br>
 	Jian Zhang*, <span style="font-weight: bold;">Anyi Rao*</span>, Conghui Geng, Yao Yu, Yu Zhou, Sidan Du (*indicates equal contribution)
 		In IEEE International Conference on Robotics and Automation (ICRA), 2018 submitted	
 	<div class="content anchor" id="research">  	      
@@ -69,6 +69,7 @@ layout: default
 		Implemented Motion Estimation and Mapping to register point cloud.<br>
 		Collected and preprocessed point cloud data sets for outdoor 3D scene reconstruction.
 			<span class="tag"><a href="papers/SurRecPoster.pdf"> [Poster]</a></span>
+		 	<span class="tag"><a href="https://youtu.be/_6JFl3p75qg"> [Video]</a></span>
 			<span class="tag"><a href="papers/3D_re.pdf"> [Presentation]</a></span> 
 			<span class="tag"><a href="http://anyirao.com/tsdf/outdoor.html"> [Demo]</a></span>
 		
