--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@ layout: default
 <div class="content anchor" id="bio">     
 	<div class="text">
 	<h3>Short Bio</h3>
-		<p> I am a third year undergrad student from School of Electronic Science and Engineering 
+		<p> I am a final-year undergrad student from School of Electronic Science and Engineering 
 			<a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">
-			Excellent Engineer Honor Class</a>, Nanjing University. I am a
-			research assistant of The University of Hong Kong, supervised by Prof.
-			<a href="http://www.cs.hku.hk/people/profile.jsp?teacher=fcmlau">Francis Lau</a>.
-			I was also a member of Learning And Mining from DatA group led by Prof. 
+			Excellent Engineer Honor Class</a>, Nanjing University. I am a reserach assistant of The University of Oregon, 
+			supervised by Prof. <a href="http://ix.cs.uoregon.edu/~dou/">Dejing Dou</a>.
+			I was a research summer intern of The University of Hong Kong, worked with Prof.
+			<a href="http://www.cs.hku.hk/people/profile.jsp?teacher=fcmlau">Francis Lau</a> and
+			a member of Learning And Mining from DatA group led by Prof. 
 			<a href="https://cs.nju.edu.cn/zhouzh/">Zhi-Hua Zhou</a>. 
 		I serve as a <a href="http://www.huawei.com/en/">HUAWEI</a> campus ambassador and 
 			 a senior student member of IEEE.
