--- a/index.html
+++ b/index.html
@@ -187,8 +187,7 @@ layout: default
 	<h3>Miscellaneous</h3>	
 		<p>Research Intern/ Group leader in <span class="tag"><a href=" http://www.cj-elec.com/en/">CHANGJIANG ELEC. TECH.</a>
 			<span class="tag"><a href="http://ese.nju.edu.cn/content-8-3133-1.html"> 
-			[Report]</a>
-			</span><br>
+			[Media Report]</a></span><br>
 		Member of Nanjing University <a href="http://www.nju.edu.cn/EN/84/08/c7125a164872/page.htm"> Student Choir</a> &nbsp 
 			(<span class="tag"><a href="http://v.youku.com/v_show/id_XMjA1ODIzMjQwOA==.html?spm=a2hzp.8244740.userfeed.5!2~5~5~5!3~5~A.Rb6hYG">Joyful Snowflakes </a></span>  written by Chih-mo Hsu) <br>    
 		Vice president of a Young Volunteers Association 
