--- a/index.html
+++ b/index.html
@@ -183,8 +183,9 @@ layout: default
         <h3>Skills</h3> 
 		<p>
 		Programming: Advanced Python, C/C++, MATLAB   &nbsp Intermediate HTML, CSS, Assembly, Altium <br>
-		Research Platforms and Libraries: TensorFlow, Theano, MatConvNet, Caffe, liblinear, libSVM, VLFeat, CVX, SPArse Modeling Software, OpenCV，OpenGL, WebGL, Git<br>
-		Operating Systems: Ubuntu 14/16, Windows XP/7/8/10, macOS<br>
+		Research Platforms and Libraries: TensorFlow, Theano, MatConvNet, Caffe, Weka, liblinear, libSVM, Word2Vec, VLFeat, CVX,
+			SPArse Modeling Software, OpenCV, OpenGL, WebGL, Git<br>
+		Operating Systems: Linux, Windows, macOS<br>
 		English Proficiency Test: TOEFL 100; GRE: 151(Verbal)+170(Math, full mark)+3.5(Writing)
 		</p>
 	<h3>Miscellaneous</h3>	
