--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@ layout: default
 			<a href="http://www.cs.hku.hk/people/profile.jsp?teacher=fcmlau">Francis Lau</a> and
 			a member of Learning And Mining from DatA group led by Prof. 
 			<a href="https://cs.nju.edu.cn/zhouzh/">Zhi-Hua Zhou</a>. 
-		I serve as a <a href="http://www.huawei.com/en/">HUAWEI</a> campus ambassador and 
-			 a senior student member of IEEE.
+		I serve as a <a href="http://www.huawei.com/en/">HUAWEI</a> campus ambassador.
 	</div>
 </div>   
 	
@@ -189,7 +188,7 @@ layout: default
 		English Proficiency Test: TOEFL 100; GRE: 151(Verbal)+170(Math, full mark)+3.5(Writing)
 		</p>
 	<h3>Miscellaneous</h3>	
-		<p>Research Intern/ Group leader in <span class="tag"><a href=" http://www.cj-elec.com/en/">CHANGJIANG ELEC. TECH.</a>
+		<p>Research intern group leader in <span class="tag"><a href=" http://www.cj-elec.com/en/">CHANGJIANG ELEC. TECH.</a>
 			<span class="tag"><a href="http://ese.nju.edu.cn/content-8-3133-1.html"> 
 			[Media Report]</a></span><br>
 		Member of Nanjing University <a href="http://www.nju.edu.cn/EN/84/08/c7125a164872/page.htm"> Student Choir</a> &nbsp 
