--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ layout: default
 		
 	<div class="content" >      
 		<h3>Awards</h3>
-		<p>National Scholarship awarded by the Chinese Ministry of Education, the highest honor in China<br>
+		<p>National Scholarship awarded by the China Ministry of Education, the highest honor in China<br>
 		Provincial-Level Merit Student awarded by the Jiangsu Provincial Government, the highest honor in Jiangsu Province<br>
 		Zhenggang Scholarship, top 40 students in Nanjing University<br>
 		Nanjing University People Scholarship<br>	
