--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ layout: default
 		Nanjing University <br>
 		Proposed a novel line of sight method to real-time reconstruct surface and achieved a state-of-the-art effect.<br>
 		Employed a novel surface lattice approach in implicit surface update for memory efficiency.<br>
-		Imporved low drift odometry and mapping (Loam) algorithms to improve accuracy.<br>		
+		Improved low drift odometry and mapping (Loam) algorithms to improve accuracy.<br>		
 		Implemented Motion Estimation and Mapping to register point cloud.
 			<span class="tag"><a href="papers/SurRecPoster.pdf"> [Poster]</a></span>
 		 	<span class="tag"><a href="https://youtu.be/_6JFl3p75qg"> [Video]</a></span>
