--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@ layout: default
 			<span class="tag"><a href="papers/3D_re.pdf"> [Presentation]</a></span> 
 			<span class="tag"><a href="http://anyirao.com/tsdf/outdoor.html"> [Demo]</a></span>
 	
-	<p><span style="font-weight: bold;">Robust Training with Word-level Adversity</span> <br>
+	<p><span style="font-weight: bold;">Robust Training with Word-level Adversity for NLP</span> <br>
 	<span style="font-style: italic;"> Sept.2017-present </span> &nbsp  Advanced Integration and Mining Lab, Eugene, OR, United States of America<br>
-		Proposed a novel word-level adversarial examples generation approach for training robust models.<br>
-		Evaluated the method with convolutional neural networks across a range of sentence-level classification tasks 
+		Proposed an efficient word-level gradient-based adversarial examples generation approach for training robust models.<br>
+		Evaluated the method with convolutional neural networks across a wide range of sentence-level classification tasks 
 		and the method achieved excellent performances on benchmarks.
 		
 	<p><span style="font-weight: bold;">Automatic Music Accompaniment Using Porbabilistic Machine Learning</span> <br>
@@ -85,7 +85,7 @@ layout: default
 		Proposed a fast decoding algorithm to deal with performance errors and reduce computational complexity from O(n<sup>2</sup>)
 		to O(n). It is able to work in real time with practical length scores.<br>
 		Constructed a comprehensive system and developed a parallel Hidden Markov Model for score following.<br>
-		Developed a new free open-source Windows based automatic music follower and accompanist.
+		Developed a new free open-source Windows-based automatic music follower and accompanist.
 		<span class="tag"><a href="https://github.com/AnyiRao/AMAHMM"> [Code]</a></span>
 		<span class="tag"><a href="papers/Report Automatic Music Accompanist.pdf"> [Paper]</a></span>
 		<span class="tag"><a href="papers/Automatic Music Accompanist Presentation.pdf"> [Presentation]</a></span>
