--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ layout: default
 		Employed a novel surface lattice approach in implicit surface update for memory efficiency.<br>
 		Improved low drift odometry and mapping (Loam) algorithms to improve accuracy.<br>		
 		Implemented Motion Estimation and Mapping to register point cloud.
-			<span class="tag"><a href="papers/SurRecPoster.pdf"> [Poster]</a></span>
+			<span class="tag"><a href="papers/icra2018.pdf"> [Paper]</a></span>
 		 	<span class="tag"><a href="https://youtu.be/_6JFl3p75qg"> [Video]</a></span>
 			<span class="tag"><a href="papers/3D_re.pdf"> [Presentation]</a></span> 
 			<span class="tag"><a href="http://anyirao.com/tsdf/outdoor.html"> [Demo]</a></span>
