--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@ layout: default
 	<h3>Publication</h3>
 	<p><span style="font-weight: bold;">Real-time Large-scale Surface Reconstruction of Lidar Point Cloud</span> <br>
 	Jian Zhang*, <span style="font-weight: bold;">Anyi Rao*</span>, Conghui Geng, Yao Yu, Yu Zhou, Sidan Du (*indicates equal contribution)
-		In IEEE International Conference on Robotics and Automation (ICRA), 2018 submitted	
+		In IEEE International Conference on Robotics and Automation (ICRA), 2018 Submitted	
 	
+	<p><span style="font-weight: bold;">Word-level Adversarial Examples for NLP</span> <br>
+	<span style="font-weight: bold;">Anyi Rao</span>, Javid Ebrahimi, Dejing Dou 
+		In Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL), 2018 Working
 		
 	<div class="content anchor" id="research">  	      
 	<h3>Research</h3>		
