--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@ layout: default
 	<p><span style="font-weight: bold;">Real-time Large-scale Surface Reconstruction of Lidar Point Cloud</span> <br>
 	Jian Zhang*, <span style="font-weight: bold;">Anyi Rao*</span>, Conghui Geng, Yao Yu, Yu Zhou, Sidan Du (*indicates equal contribution)
 		In IEEE International Conference on Robotics and Automation (<span style="font-weight: bold;">ICRA</span>), 2018 Submitted	
-	
+		<span class="tag"><a href="papers/icra2018.pdf"> [Paper]</a></span>
+		<span class="tag"><a href="https://youtu.be/_6JFl3p75qg"> [Video]</a></span>
+		<span class="tag"><a href="papers/icra2018pre.pdf"> [Presentation]</a></span> 
+		<span class="tag"><a href="http://anyirao.com/tsdf/outdoor.html"> [Demo]</a></span>
+		
 	<p><span style="font-weight: bold;">Word-level Adversarial Examples for NLP</span> <br>
 	<span style="font-weight: bold;">Anyi Rao</span>, Javid Ebrahimi, Dejing Dou 
 		In Annual Conference of the North American Chapter of the Association for Computational Linguistics 
@@ -73,10 +77,7 @@ layout: default
 		Employed a novel surface lattice approach in implicit surface update for memory efficiency.<br>
 		Improved low drift odometry and mapping (Loam) algorithms to improve accuracy.<br>		
 		Implemented Motion Estimation and Mapping to register point cloud.
-			<span class="tag"><a href="papers/icra2018.pdf"> [Paper]</a></span>
-		 	<span class="tag"><a href="https://youtu.be/_6JFl3p75qg"> [Video]</a></span>
-			<span class="tag"><a href="papers/3D_re.pdf"> [Presentation]</a></span> 
-			<span class="tag"><a href="http://anyirao.com/tsdf/outdoor.html"> [Demo]</a></span>
+			
 	
 	<p><span style="font-weight: bold;">Robust Training with Word-level Adversity for NLP</span> <br>
 	<span style="font-style: italic;"> Sept.2017-present </span> &nbsp  Advanced Integration and Mining Lab, Eugene, OR, United States of America<br>
