--- a/index.html
+++ b/index.html
@@ -73,15 +73,16 @@ layout: default
 	<p><span style="font-weight: bold;">Real-time 3D Surface Reconstruction Using Lidar (Light Detection And Ranging)</span> <br>
 	<span style="font-style: italic;"> Aug.2016-Sept.2017 </span> &nbsp  Visual Sensing and Graphics Lab (VISG Lab), 
 		Nanjing University <br>
-		Proposed a novel line of sight method to real-time reconstruct surface and achieved a state-of-the-art effect.<br>
-		Employed a novel surface lattice approach in implicit surface update for memory efficiency.<br>
-		Improved low drift odometry and mapping (Loam) algorithms to improve accuracy.<br>		
-		Implemented Motion Estimation and Mapping to register point cloud.
+		Proposed a novel line of sight algorithm to real-time reconstruct surface and achieved state-of-the-art results.<br>
+		Employed a new surface lattice data structure in implicit surface update for memory efficiency.<br>
+		Presented a real-time 3D reconstruction pipeline for large-scale Lidar point cloud.<br>		
+		Implemented parallel computation to update the implicit surface faster and Motion Estimation and Mapping to register point cloudd.
 			
 	
 	<p><span style="font-weight: bold;">Robust Training with Word-level Adversity for NLP</span> <br>
 	<span style="font-style: italic;"> Sept.2017-present </span> &nbsp  Advanced Integration and Mining Lab, Eugene, OR, United States of America<br>
-		Proposed an efficient word-level gradient-based adversarial examples generation approach for training robust models.<br>
+		Proposed an efficient word-level gradient-based adversarial examples generation approach for training robust models 
+			with the help of WordNet constraints.<br>
 		Evaluated the method with convolutional neural networks across a wide range of sentence-level classification tasks 
 		and the method achieved excellent performances on benchmarks.
 		
